--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -304,7 +304,7 @@
 
     <div class="ribbon-bar download" onclick="downloadUserManual()">
         <b>User Manual</b>
-        <span class="arrow">↓</span>
+        <span class="arrow">2B73</span>
     </div>
 
     <div id="templates" class="input-section">
