--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -26,10 +26,10 @@
             align-items: center;
         }
         .ribbon-bar.download {
-            background-color: #28a745; /* Green for download ribbon */
+            background-color: #007bff; /* blue for download ribbon */
         }
         .ribbon-bar.download:hover {
-            background-color: #218838; /* Darker green on hover */
+            background-color: #007bff; /* blue on hover */
         }
         .ribbon-bar h2 {
             color: white;
