--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -295,11 +295,12 @@
         <span class="arrow">►</span>
     </div>
     <div id="general-info-content" class="explanation-content">
-        <p>Nurse scheduling (or shift management) is a long-standing challenge in many hospitals and healthcare systems. While the problem has been widely studied in academia, especially in operations research, there are still few software tools that are actually used by hospital staff.</p>
-        <p>Based on our interviews with nurses from three different hospitals in Iran, we found that nurse scheduling is still often done manually by one of the volunteer nurses. This process can be time-consuming and inefficient, especially when considering multiple constraints such as department-specific shift requirements, and fairness (based on seniority, weekend and night shifts, and individual preferences). This problem is a variation of the classic "assignment problem" in operations research. To address this problem, we develop an integer programming model in Python using the Gurobi optimization library. More technical details are available in the application user manual.</p>
-        <p>To generate the optimal nurse schedule, the following three sets of inputs are defined: 1. Nurses' ID/Name/Seniority. 2. Shift requirements (number of nurses needed per shift across the planning horizon). 3. Preferences of each nurse for each shift (if available). You can enter the inputs in one of two ways: File Upload and Manual Entry. You can also combine both methods, manual entries will override any matching entries from the uploaded files.</p>
+        <p>Nurse scheduling (or shift management) is a long-standing challenge in hospitals and healthcare systems. Although this problem has been widely studied in academic fields like operations research, there are still very few software tools that are used by hospital staff in practice.</p>
+        <p>Based on our interviews with nurses from three different hospitals in Iran, we found that nurse scheduling is still often done manually by a volunteer nurse. This process is not only time-consuming but also inefficient, especially when multiple constraints need to be considered, such as department-specific shift requirements, fairness (based on seniority, weekend and night shifts), individual preferences, and off-day requests.</p>
+        <p>From a technical perspective, this is a variation of the classic "assignment problem" in operations research. To address this problem, we developed an integer programming model in Python using the Gurobi optimization library.</p>
+        <p>To generate the optimal nurse schedule, the following three sets of inputs are defined in CSV file format: 1. Nurses' ID/Name/Seniority. 2. Shift requirements (number of nurses needed per shift across the planning horizon). 3. Preferences of each nurse for each shift (if available). Users can provide inputs in two ways: by uploading files or by entering data manually. Manual entries will override any matching entries from uploaded files.</p>
         <p>In case of uploading input files, please use the format provided in the template files available on this page. Download the three input templates, complete them using your own nurse data and requirements, and make sure to keep the header rows and file names unchanged. Upload the completed files and then click "Generate Schedule and Reports".</p>
-        <p>You can also download sample output files (generated based on the template inputs) to understand the expected format and compare them with your own results. These sample outputs are provided in the Reports section below and will be replaced with new output files based on your uploaded inputs after generating the schedule.</p>
+        <p>You can also download template output files (generated based on the template inputs) to understand the expected format and compare them with your own results. These template outputs are provided in the Reports section below and will be replaced with new output files based on your uploaded inputs after generating the schedule.</p>
     </div>
 
     <div class="ribbon-bar download" onclick="downloadUserManual()">
@@ -393,12 +394,12 @@
 
     <div id="reports">
         <h2>Reports</h2>
-        <p id="reports-caption">The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.</p>
-        <a id="schedule-placeholder" href="templates/placeholder_schedule.csv" download="placeholder_schedule.csv">Download Sample Optimal Schedule (CSV)</a>
-        <a id="stats-placeholder" href="templates/placeholder_stats.csv" download="placeholder_stats.csv">Download Sample Nurse Statistics (CSV)</a>
-        <a id="coverage-placeholder" href="templates/placeholder_coverage.csv" download="placeholder_coverage.csv">Download Sample Shift Coverage (CSV)</a>
-        <a id="pdf-placeholder" href="templates/placeholder_report.pdf" download="placeholder_report.pdf">Download Sample Nurse Report (PDF)</a>
-        <a id="gantt-placeholder-link" href="templates/placeholder_gantt.png" download="placeholder_gantt.png">Download Sample Gantt Chart (PNG)</a>
+        <p id="reports-caption">The below reports are template outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.</p>
+        <a id="schedule-placeholder" href="templates/placeholder_schedule.csv" download="placeholder_schedule.csv">Download Template Optimal Schedule (CSV)</a>
+        <a id="stats-placeholder" href="templates/placeholder_stats.csv" download="placeholder_stats.csv">Download Template Nurse Statistics (CSV)</a>
+        <a id="coverage-placeholder" href="templates/placeholder_coverage.csv" download="placeholder_coverage.csv">Download Template Shift Coverage (CSV)</a>
+        <a id="pdf-placeholder" href="templates/placeholder_report.pdf" download="placeholder_report.pdf">Download Template Nurse Report (PDF)</a>
+        <a id="gantt-placeholder-link" href="templates/placeholder_gantt.png" download="placeholder_gantt.png">Download Template Gantt Chart (PNG)</a>
         <a id="schedule-csv" href="#" style="display: none;">Download Optimal Schedule (CSV)</a>
         <a id="stats-csv" href="#" style="display: none;">Download Nurse Statistics (CSV)</a>
         <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
