--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -309,10 +309,10 @@
     </div>
 
     <div id="templates" class="input-section">
-        <h2>Download Templates</h2>
-        <a href="templates/nurses_file.csv" download="nurses_file.csv">Download Nurses Template (CSV)</a>
-        <a href="templates/requirements_file.csv" download="requirements_file.csv">Download Requirements Template (CSV)</a>
-        <a href="templates/preferences_file.csv" download="preferences_file.csv">Download Preferences Template (CSV)</a>
+        <h2>Download Input Templates</h2>
+        <a href="templates/nurses_file.csv" download="nurses_file.csv">Download Nurses Input Template (CSV)</a>
+        <a href="templates/requirements_file.csv" download="requirements_file.csv">Download Requirements Input Template (CSV)</a>
+        <a href="templates/preferences_file.csv" download="preferences_file.csv">Download Preferences Input Template (CSV)</a>
     </div>
 
     <div class="input-section">
