--- a/projects/chess/index.html
+++ b/projects/chess/index.html
@@ -59,14 +59,14 @@
   <div id="board"></div>
 
   <script>
-  window.onload = function () {
-    const socket = io("https://continuous-exuberant-stetson.glitch.me");
+    const socket = io("https://continuous-exuberant-stetson.glitch.me"); // ✅ Your Glitch backend
     const board = Chessboard('board', {
       draggable: true,
       dropOffBoard: 'snapback',
       position: 'start',
       onDrop: onDrop
     });
+
     const game = new Chess();
     let roomId;
 
@@ -101,12 +101,6 @@
       game.move(move);
       board.position(game.fen());
     });
-
-    // expose functions to HTML
-    window.createGame = createGame;
-    window.joinGame = joinGame;
-  }
-</script>
-
+  </script>
 </body>
 </html>
